--- a/ajax-store.html
+++ b/ajax-store.html
@@ -2,103 +2,123 @@
 <html>
 <head>
     <title>Online Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Danny's Tools</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav" id="navbar-nav">
+<!--                        Add refresh button dynamically-->
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <table id="products">
+                    <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                        <th>Categories</th>
+                    </tr>
+                    </thead>
+                    <tbody id="insertProducts"></tbody>
+                </table>
+            </div>
+        </div>
+    </main>
 
-<h1>My Tool Store</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script>
+    (async function() {
+        "use strict";
 
-<table id="products">
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Categories</th>
-        </tr>
-    </thead>
-    <tbody id="insertProducts"></tbody>
-</table>
+        let generateInventoryTable = async () => {
+            // TODO: Create an AJAX GET request for the file under data/inventory.json
+            let inventory = await $.get('data/inventory.json')
 
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+            // TODO: Take the data from inventory.json and append it to the products table
+            //       HINT: Your data should come back as a JSON object; use console.log() to inspect
+            //             its contents and fields
+            //       HINT: You will want to target #insertProducts for your new HTML elements
 
-<script>
-(async function() {
-    "use strict";
+            //Grab the table
+            let table = document.getElementById('insertProducts')
 
-    let generateInventoryTable = async () => {
-        // TODO: Create an AJAX GET request for the file under data/inventory.json
-        let inventory = await $.get('data/inventory.json')
+            //Clear it
+            $(table).html('')
 
-        // TODO: Take the data from inventory.json and append it to the products table
-        //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-        //             its contents and fields
-        //       HINT: You will want to target #insertProducts for your new HTML elements
-
-        //Grab the table
-        let table = document.getElementById('insertProducts')
-
-        //Clear it
-        $(table).html('')
-
-        //Function for generating new rows for the table based on the inventory item object
-        let generateTableRow = (inventory_item) => {
-            //Generate the table row
-            let row = document.createElement('tr')
-            //Generate the title cell
-            let titleCell = document.createElement('td')
-            //Popuate the title cell
-            $(titleCell).text(inventory_item.title)
-            //Generate the quantity cell
-            let quantityCell = document.createElement('td')
-            //Populate the quantity cell
-            $(quantityCell).text(inventory_item.quantity)
-            //Generate the price cell
-            let priceCell = document.createElement('td')
-            //Popuate the price cell
-            $(priceCell).text(`$${inventory_item.price.toFixed(2)}`)
-            //Generate the categories cell
-            let categoriesCell = document.createElement('td')
-            //Generate the categories list
-            let categoriesList = document.createElement('ul')
-            //Iterate through all the categories in the inventory item
-            inventory_item.categories.forEach(category => {
-                //Generate the category list item
-                let categoryListItem = document.createElement('li')
-                //Populate the category list item
-                $(categoryListItem).text(category)
-                //Append the category list item to the category list
-                $(categoriesList).append(categoryListItem)
+            //Function for generating new rows for the table based on the inventory item object
+            let generateTableRow = (inventory_item) => {
+                //Generate the table row
+                let row = document.createElement('tr')
+                //Generate the title cell
+                let titleCell = document.createElement('td')
+                //Popuate the title cell
+                $(titleCell).text(inventory_item.title)
+                //Generate the quantity cell
+                let quantityCell = document.createElement('td')
+                //Populate the quantity cell
+                $(quantityCell).text(inventory_item.quantity)
+                //Generate the price cell
+                let priceCell = document.createElement('td')
+                //Popuate the price cell
+                $(priceCell).text(`$${inventory_item.price.toFixed(2)}`)
+                //Generate the categories cell
+                let categoriesCell = document.createElement('td')
+                //Generate the categories list
+                let categoriesList = document.createElement('ul')
+                //Iterate through all the categories in the inventory item
+                inventory_item.categories.forEach(category => {
+                    //Generate the category list item
+                    let categoryListItem = document.createElement('li')
+                    //Populate the category list item
+                    $(categoryListItem).text(category)
+                    //Append the category list item to the category list
+                    $(categoriesList).append(categoryListItem)
+                })
+                //Populate the categories cell with the categories list
+                $(categoriesCell).append(categoriesList)
+                //Populate the row with all the cells
+                $(row).append(titleCell, quantityCell, priceCell, categoriesCell)
+                return row
+            }
+            //Generate rows for each inventory item
+            inventory.forEach(item => { //Go through each item
+                let row = generateTableRow(item) //Generate the row for this item
+                $(table).append(row) //And add it to the table
             })
-            //Populate the categories cell with the categories list
-            $(categoriesCell).append(categoriesList)
-            //Populate the row with all the cells
-            $(row).append(titleCell, quantityCell, priceCell, categoriesCell)
-            return row
+
+
+
         }
-        //Generate rows for each inventory item
-        inventory.forEach(item => { //Go through each item
-            let row = generateTableRow(item) //Generate the row for this item
-            $(table).append(row) //And add it to the table
-        })
 
+        /*
+            Add a "Refresh" button that will load inventory.json for you without having to refresh the entire page.
+         */
+        let refreshButton = document.createElement('button')
+        $(refreshButton).text('Refresh Inventory')
+        $(refreshButton).click(()=>generateInventoryTable())
+        $(refreshButton).addClass('nav-item')
+        $('#navbar-nav').append(refreshButton)
 
+        //Initially populate the inventory table
+        generateInventoryTable()
 
-    }
-
-    /*
-        Add a "Refresh" button that will load inventory.json for you without having to refresh the entire page.
-     */
-    let refreshButton = document.createElement('button')
-    $(refreshButton).text('Refresh Inventory')
-    $(refreshButton).click(()=>generateInventoryTable())
-
-    $(document.body).append(refreshButton)
-
-    //Initially populate the inventory table
-    generateInventoryTable()
-
-})();
-</script>
+    })();
+    </script>
 
 </body>
 </html>
