--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -12,34 +12,16 @@
       <!-- Bootstrap CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
       <style>
-          /*body { margin: 0; padding: 0; }*/
+          body { margin: 0; padding: 0; }
           #map {
               position: absolute;
-              top: 6%;
+              top: 5.7%;
               bottom: 0;
               width: 100%;
               z-index: -1;
           }
 
-          @keyframes bounce {
-              from{
-                  position: relative;
-                  top: 0px;
-              }
-
-              to{
-                  position: relative;
-                  top: -20px;
-              }
-          }
-
-          .marker{
-              background-size: cover;
-              width: 50px;
-              height: 50px;
-              border-radius: 50%;
-              cursor: pointer
-          }
+          /* Classes to set the marker images */
           .steakMarker {
               background-image: url('/img/mapbox/markers_design/Texas Roadhouse Marker.png');
           }
@@ -51,6 +33,20 @@
           }
           .unknownMarker {
               background-image: url('/img/mapbox/markers_design/Unknown Marker.png');
+          }
+
+          @keyframes getNoticed {
+              from {
+                  transform: scale(1);
+              }
+
+              to {
+                  transform : scale(1.05);
+              }
+          }
+
+          .navbar-brand{
+              animation: getNoticed 2s linear 2s infinite alternate;
           }
       </style>
   </head>
