--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -22,6 +22,7 @@
           }
 
           /* Classes to set the marker images */
+          /*Marker Designs : https://www.figma.com/file/MdKaYIxpDnBwyifNF07mSv/Untitled?node-id=0%3A1*/
           .steakMarker {
               background-image: url('/img/mapbox/markers_design/Texas Roadhouse Marker.png');
           }
