--- a/weather_map.html
+++ b/weather_map.html
@@ -4,9 +4,215 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Mapbox CSS -->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
+    <!-- Mapbox JS -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+    <style>
+      body {
+          margin: 0;
+          padding: 0;
+      }
+      #map {
+          position: absolute;
+          top: 5.7%;
+          left: 50%;
+          bottom: 0;
+          width: 50%;
+          z-index: -1;
+      }
+    </style>
     <title>Weather Map</title>
 </head>
 <body>
+<header>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Weather Map</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav" id="navbar-nav">
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<main>
+    <!-- MAP Element-->
+    <div id="container">
+        <h3>Forecast for <span id="city_name">City Name</span></h3>
+        <div id="weather_info" style="overflow-y: scroll;max-height: calc(100vh - 100px);"></div>
+    </div>
+    <div id="map"></div>
+</main>
 
+<!-- Load the `mapbox-gl-geocoder` plugin. -->
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
+
+<!-- Bootstrap & jQuery-->
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+<!-- Keys -->
+<script src="js/keys.js"></script>
+
+<!-- Custom JS-->
+<script>
+    //Set the mapboxgl api access token
+    mapboxgl.accessToken = MAPBOX_KEY
+
+    //Default zoom level for map
+    let zoomLevel = 20
+
+    //Default map center coordinates
+    let mapCenter = [
+        -97.701275,
+        31.08318
+    ]
+
+    //Lists to keep track of markers and popups in the map
+    let markers = []
+    let popups = []
+
+    //Generate a new map
+    const map = new mapboxgl.Map({
+        container: 'map', //set the container id
+        style: 'mapbox://styles/mapbox/streets-v11', //set a style
+        center: mapCenter, //set the default center lat lng coordinates
+        zoom: zoomLevel //set the default zoom level
+    })
+
+
+
+    //Geocode function
+    const geocode = (search, token) => {
+        const baseUrl = 'https://api.mapbox.com'
+        const endPoint = '/geocoding/v5/mapbox.places/'
+        return fetch(baseUrl + endPoint + encodeURIComponent(search) + '.json' + "?" + 'access_token=' + token)
+            .then((res) => {
+                return res.json()
+                // to get all the data from the request, comment out the following three lines...
+            }).then((data) => {
+                return data.features[0].center
+            })
+    }
+
+    /*
+        Function retrieves weateher data from openweathermap api
+     */
+    const getWeatherData = async (city) => {
+        const data = await $.get("http://api.openweathermap.org/data/2.5/weather", {
+            APPID: OPEN_WEATHER_APPID,
+            q: city
+        })
+        console.log(data)
+        $('#city_name').text(data.name)
+        return data
+    }
+
+    /*
+        Function retrieves 5 day weather forecast from location
+     */
+    const getFiveDayForecast = async (city) => {
+        let latLng = await geocode(city,MAPBOX_KEY)
+        console.log(latLng)
+        let data = await $.get('http://api.openweathermap.org/data/2.5/forecast', {
+            lat : latLng[1],
+            lon : latLng[0],
+            APPID: OPEN_WEATHER_APPID,
+            units : 'imperial'
+        })
+
+        //Clear whatever may be inside the weather info container
+        $('#weather_info').html('')
+
+        //Iterate through each forecast item
+        data.list.forEach(item=>{
+            //Create a container for the current forecast item
+            const itemContainer = document.createElement('div')
+
+            //Give the container a class of row for bootstrap styling
+            $(itemContainer).addClass('row')
+
+            //Create the date field
+            const dateTime = document.createElement('div')
+
+            //Set the text of the date field
+            $(dateTime).text(item.dt_txt)
+
+            //Append the date field to the item container
+            $(itemContainer).append(dateTime)
+
+
+            //Generate the low and high temperatures view
+            const lowHigh = document.createElement('div')
+            $(lowHigh).text(`Low: ${item.main.temp_min}˚F | High: ${item.main.temp_max}˚F`)
+
+            //Add them to the item container
+            $(itemContainer).append(lowHigh)
+
+            //Generate the Humidity view
+            const humidity = document.createElement('div')
+            $(humidity).text(`Humidity: ${item.main.humidity}`)
+
+            //Add the humidity view to the item container
+            $(itemContainer).append(humidity)
+
+            //Generate the windage container
+            const windage = document.createElement('div')
+            $(windage).text(`Direction: ${item.wind.deg}˚ Gust: ${item.wind.gust}mph Speed: ${item.wind.speed}mph`)
+
+            //Add the windage view to the item container
+            $(itemContainer).append(windage)
+
+            //Generate an image for the clouds
+            const itemImage = document.createElement('img')
+            $(itemImage).css({
+                width : '80px',
+                height : '50px'
+            })
+
+            //Generate the pressure view
+            const pressure = document.createElement('div')
+            $(pressure).text(`Pressure: ${item.main.pressure}`)
+
+            //Add it to the item container
+            $(itemContainer).append(pressure)
+
+            //Get the icon code
+            const icon = item.weather[0].icon
+
+            //Slap together the URL for the image src
+            const url = `http://openweathermap.org/img/wn/${encodeURIComponent(icon)}@2x.png`
+
+            //Set the src attribute of the image to the url
+            $(itemImage).attr('src',url)
+
+            //Append the image to the item container
+            $(itemContainer).append(itemImage)
+
+
+            //Append the item container to the weather info
+            $('#weather_info').append(itemContainer)
+        })
+        return data
+    }
+
+    const getKilleenTxWeatherData = async () => {
+        const weatherData = await getWeatherData('Killeen, TX, US')
+        console.log(weatherData)
+
+        const forecastData = await getFiveDayForecast('Killeen, TX, US')
+        console.log(forecastData)
+    }
+
+    getKilleenTxWeatherData()
+  </script>
 </body>
 </html>
