--- a/weather_map.html
+++ b/weather_map.html
@@ -1,21 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <!-- Mapbox CSS -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
+
     <!-- Mapbox JS -->
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <style>
       body {
-          margin: 0;
           padding: 0;
-          margin-top: 100px;
+          margin: 100px 0 0;
           background-image: url('/img/weatherbg.jpeg');
           background-attachment: fixed;
           background-size: cover;
@@ -32,11 +35,8 @@
           border-bottom-right-radius: 20px !important;
           box-shadow: 0px 0px 10px black;
       }
+
       #map {
-          /*position: absolute;*/
-          /*top: 5.7%;*/
-          /*left: 50%;*/
-          /*bottom: 0;*/
           height: calc(50vh - 100px);
           z-index: 1;
           background: black;
@@ -58,8 +58,8 @@
           overflow-y: scroll !important;
           z-index: 1;
       }
-
     </style>
+
     <title>Weather Map</title>
 </head>
 <body>
