--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -4,20 +4,15 @@
       <meta charset="UTF-8">
       <title>MapBox Restaurant Display</title>
       <!--  Generate a Mapbox API Key using the steps from above-->
-      <!-- Mapbox CSS -->
-      <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
-      <!-- Mapbox JS -->
-      <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
-      <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
       <style>
           body { margin: 0; padding: 0; }
           #map {
-              position: absolute;
-              top: 5.7%;
-              bottom: 0;
+              position: relative;
+              /*top: 5.7%;*/
+              /*bottom: 0;*/
               width: 100%;
-              z-index: -1;
+              height: 100%;
+              z-index: 1;
           }
 
           /* Classes to set the marker images */
@@ -35,6 +30,11 @@
               background-image: url('/img/mapbox/markers_design/Unknown Marker.png');
           }
 
+          .bounceing {
+              animation : bounce 2s ease infinite;
+              animation-iteration-count: 2;
+          }
+
           @keyframes getNoticed {
               from {
                   transform: scale(1);
@@ -45,10 +45,28 @@
               }
           }
 
+          @keyframes bounce {
+              0%, 20%, 50%, 100% {
+                  transfrom: translateY(0);
+              }
+              40% {
+                  transform: translateY(-15px);
+              }
+              60% {
+                  transform : translateY(-30px);
+              }
+          }
+
           .navbar-brand{
               animation: getNoticed 2s linear 2s infinite alternate;
           }
       </style>
+      <!-- Mapbox CSS -->
+      <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
+      <!-- Mapbox JS -->
+      <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
+      <!-- Bootstrap CSS -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
 
@@ -84,9 +102,9 @@
       </nav>
     </header>
 
-    <main>
+    <main class="w-100 h-100">
       <!-- MAP Element-->
-      <div id="map"></div>
+      <div id="map" style="width: 100vw; height: 100vh;"></div>
     </main>
 
     <!-- Load the `mapbox-gl-geocoder` plugin. -->
@@ -101,7 +119,6 @@
     <script>
       // TODO: Generate a map that shows the city with your favorite restaurant using geocoding.
 
-      console.log(MAPBOX_KEY)
       //Set the mapboxgl api access token
       mapboxgl.accessToken = MAPBOX_KEY
 
@@ -125,8 +142,6 @@
         center: mapCenter, //set the default center lat lng coordinates
         zoom: zoomLevel //set the default zoom level
       })
-
-
 
       //Geocode function
       const geocode = (search, token) => {
@@ -262,12 +277,12 @@
       }
 
       // Add the control to the map.
-      map.addControl(
-              new MapboxGeocoder({
-                accessToken: mapboxgl.accessToken,
-                mapboxgl: mapboxgl
-              })
-      )
+      // map.addControl(
+      //         new MapboxGeocoder({
+      //           accessToken: mapboxgl.accessToken,
+      //           mapboxgl: mapboxgl
+      //         })
+      // )
 
       //Handle category click
       const handleCategoryClick = async (category,event) => {
@@ -280,7 +295,7 @@
           //Fly the map to the geocoded coordinates
           map.flyTo({
               center: latlng,
-              essential: true // this animation is considered essential with respect to prefers-reduced-motion
+              // essential: true // this animation is considered essential with respect to prefers-reduced-motion
           });
       }
 
@@ -384,113 +399,49 @@
 
               //Create an element for the marker
               const el = document.createElement('div');
+              $(el).css({
+                  position : 'relative'
+              })
+
               // with the correct class so that the marker is assigned the correct image
-              el.className = 'unknownMarker'
+
               //And size
               el.style.width = `50px`;
-              el.style.height = `100px`;
+              el.style.height = `200px`;
+
               //And set the background size to fill
               el.style.backgroundSize = '100%';
 
-                  //Create a marker
-                  const marker = new mapboxgl.Marker(el)
+              let mrkrimg = document.createElement('img')
+              $(mrkrimg).css({
+                width: '50px',
+                height : '100px'
+              })
+              $(mrkrimg).attr('src','/img/mapbox/markers_design/Unknown Marker.png')
+              $(mrkrimg).addClass('bounceing')
+              $(el).append(mrkrimg)
+              // Start the bouncing
+              // $(el).addClass('bounceing')
+
+              //Stop the bouncing after 4 seconds
+              setTimeout(()=>{
+                  $(mrkrimg).removeClass('bounceing')
+              },40000)
+
+              //Create a marker
+              const marker = new mapboxgl.Marker(el)
                       .setLngLat(latLng) //Set the marker's position on the map
                       .addTo(map) //And add it to the map
 
-                  //Set the addr attribute on the marker object so we can have a way to geocode the latLng when we finish zooming and reset the marker's position
-                  marker.addr = addr
+              //Set the addr attribute on the marker object so we can have a way to geocode the latLng when we finish zooming and reset the marker's position
+              marker.addr = addr
 
-                  const animateThisMarker = (timestamp) => {
-                      //Lookup table for the amplitude value based on zoomLevel
-                      let amplitudeLookup = [
-                          {
-                              min : 0,
-                              max : 5,
-                              amplitude : 0.01
-                          },
-                          {
-                              min : 5,
-                              max : 7,
-                              amplitude: 0.001,
-                          },
-                          {
-                              min: 7,
-                              max: 9,
-                              amplitude: 0.0001,
-                          },
-                          {
-                              min: 9,
-                              max : 12,
-                              amplitude: 0.00001,
-                          },
-                          {
-                              min : 12,
-                              max : 15,
-                              amplitude: 0.000001
-                          },
-                          {
-                              min : 15,
-                              max : 23,
-                              amplitude: 0.0000001
-                          }
-                      ]
-
-                      //Use the lookup table to figure out the amplitude for the current zoom level
-                      let amplitude = amplitudeLookup.filter(i=>(zoomLevel >= i.min && zoomLevel <= i.max))
-
-                      //Multiplyer for the amplitude
-                      let amplitudeMultiplyer = 2
-
-                      //Calculate the amplitude by multiplying it with the amplitude multiplier
-                      amplitude = amplitude[0].amplitude * amplitudeMultiplyer
-
-
-                      //Calculate the offset
-                      let offset = amplitude * Math.sin(timestamp / 1000)
-
-                      //Get the new latitude and longitudes
-                      let lng = Number(marker._lngLat.lng)
-                      let lat = Number(marker._lngLat.lat)  + offset
-
-                      //Assign them to the marker
-                      marker.setLngLat([
-                          lng,
-                          lat
-                      ])
-
-                      //If the animation is running, request another frame
-                      if(running) {
-                          animationId = requestAnimationFrame(animateThisMarker)
-                      }
-                  }
-
-                  //Kick off the marker animation
-                  animationId = requestAnimationFrame(animateThisMarker)
-
-                  // Stop animation after 10 seconds, 2 seconds is too little to see it go
-                  setTimeout(()=>{
-                      cancelAnimationFrame(animationId) //Stop the marker animation
-                  },10000)
-
-                  // Add the marker to our list of markers
-                  markers.push(marker)
+              // Add the marker to our list of markers
+              markers.push(marker)
 
           }catch(err){
               console.error(err)
           }
-      })
-
-      map.on('zoom',val=>{
-          //Set the zoom level
-          zoomLevel = val.target.transform._zoom
-      })
-
-      map.on('zoomend', e=> {
-          //Reset all markers to their original positions, to fix animation deviations caused by zooming
-          markers.forEach(async marker=>{ //Iterate through all the markers
-              let latLng = await geocode(marker.addr,MAPBOX_KEY) //Geocode their addr attribute value to get a latitude and longitude
-              marker.setLngLat(latLng) //Set the latlng to of the marker to the geocoded value
-          })
       })
 
       //When the hide all markers button is clicked
